Bug behoben in TelegramBot